<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.cccho.inventory.DetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:layout_margin="@dimen/activity_margin">

        <TextView
            android:id="@+id/product_name_title"
            style="@style/details_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_name_title" />

        <EditText
            android:id="@+id/product_name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"/>

        <TextView
            android:id="@+id/price_title"
            style="@style/details_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_title" />

        <EditText
            android:id="@+id/price_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="5" />

        <TextView
            android:id="@+id/quantity_title"
            style="@style/details_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/decrease_quantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_decrease" />

            <EditText
                android:id="@+id/quantity_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="4" />

            <ImageButton
                android:id="@+id/increase_quantity"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_increase" />
        </LinearLayout>

        <TextView
            android:id="@+id/supplier_name_title"
            style="@style/details_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supplier_name_title" />

        <EditText
            android:id="@+id/supplier_name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/supplier_name_hint"
            android:inputType="text" />


        <EditText
            android:id="@+id/supplier_email_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/supplier_email_address_hint"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/picture_title"
            style="@style/details_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/picture" />

        <Button
            android:id="@+id/picture_add_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_picture" />

        <ImageView
            android:id="@+id/picture_view"
            android:layout_width="240dp"
            android:layout_height="100dp"
            android:layout_gravity="center"/>
    </LinearLayout>

</LinearLayout>